font and alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Cabin:700');
-.App {
-  font-family: 'Cabin', sans-serif;
+@font-face{
+  font-family: 'brown-regular';
+  src: url('./assets/fonts/brown/BrownRegular.ttf')
+}
+
+@font-face{
+  font-family: 'brown-bold';
+  src: url('./assets/fonts/brown/BrownBoldAlt.ttf')
 }
 
 .App-logo {
@@ -27,9 +32,11 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+.nav-item{
+}
 .nav-link{
   color: #000;
-  font-weight: bold;
+  font-family: 'brown-bold';
   padding: 5px 24px 5px 24px;
 }
 
@@ -47,7 +54,24 @@
   border: 1px solid #000;
 }
 
-.about_img{
+.top_heading{
+  font-family: 'brown-bold';
+  letter-spacing: 4px;
+  margin-top: 2em;
+}
+
+.top_heading>h1{
+  position: relative;
+  font-size: 3em
+}
+
+.top_subheading{
+  font-family: 'brown-regular';
+  margin-top: 1em;
+}
+
+.top_subheading>h2{
+  font-size: 2.5em
 }
 
 .stick-1{
@@ -60,14 +84,24 @@
 
 .stick-2{
     position: absolute;
-    top: 87px;
+    top: 98px;
     left: 0;
-    width: 25em;
+    width: 30em;
     height: 15px;
 }
 
 .donate-btn{
     background: #286702;
     letter-spacing: 2px;
-    width: 100%;
+    font-family: 'brown-regular';
+    font-size: 25px;
+    width: 96%;
+}
+
+.top_img{
+  height: 39em;
+  margin-top: -57px;
+  margin-left: -37px;
+  transform: rotate(5deg);
+  height: 35em;
 }
